plugins {
    id 'java-library'
    id 'net.neoforged.gradle.userdev' version '7.0.181'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

base {
    archivesName = 'create-schematic-compute'
}

group = 'io.github.y15173334444'
version = '1.2.4.1'

runs {
    configureEach {
        systemProperty 'forge.logging.console.level', 'info'
        modSource sourceSets.main
    }

    client {
        systemProperty 'forge.enabledGameTestNamespaces', project.group
        // Multiplayer dev: -Pusername=Name sets player name
        if (project.hasProperty('username')) {
            arguments '--username', project.property('username').toString()
        }
    }

    client2 {
        runType 'client'
        systemProperty 'forge.enabledGameTestNamespaces', project.group
        // Multiplayer dev: -Pusername2=Name sets second player name
        if (project.hasProperty('username2')) {
            arguments '--username', project.property('username2').toString()
        } else {
            arguments '--username', 'Dev2'
        }
    }

    server {
        systemProperty 'forge.enabledGameTestNamespaces', project.group
        arguments '--nogui'
    }
}

repositories {
    mavenCentral()
    maven { url = 'https://maven.blamejared.com' }           // Create
    maven { url = 'https://maven.tterrag.com' }              // Registrate, Flywheel
    maven { url = 'https://maven.moddinginquisition.org/releases' }
    flatDir {
        dirs 'libs'
    }
}

dependencies {
    implementation "net.neoforged:neoforge:${neo_version}"

    // Local JAR dependencies (needed at compile time)
    compileOnly fileTree(dir: 'libs', include: '*.jar')
    runtimeOnly fileTree(dir: 'libs', include: '*.jar')

    // Mixin AP for processing @Mixin annotations
    annotationProcessor 'org.spongepowered:mixin:0.8.7:processor'

    // Unit tests
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version       : minecraft_version,
            minecraft_version_range : minecraft_version_range,
            neo_version             : neo_version,
            neo_version_range       : neo_version_range,
            loader_version_range    : loader_version_range,
            mod_id                  : mod_id,
            mod_name                : mod_name,
            mod_license             : mod_license,
            mod_version             : mod_version,
            mod_authors             : mod_authors,
            mod_description         : mod_description,
            create_version_range    : create_version_range,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

java {
    withSourcesJar()
}
